[package]
name = "aoc"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
color-eyre = "0.6.2"
dotenvy = "0.15.6"
itertools = "0.10.5"
md-5 = "0.10.5"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
nom = "7.1.1"
petgraph = "0.6.2"
serde_json = "1.0.87"
ureq = { version = "2.5.0", features = ["cookies"] }
