[package]
name = "aoc"
version = "0.1.0"
edition = "2021"


# For profiling purposes
[profile.release]
# debug = true


[dependencies]
arboard = { version = "3.3.0", default-features = false }
atoi = "2.0.0"
bstr = "1.8.0"
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
dotenvy = "0.15.7"
itertools = "0.12.0"
md-5 = "0.10.6"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
petgraph = "0.6.4"
serde_json = "1.0.108"
time = { version = "0.3.30", features = ["macros"] }
ureq = { version = "2.9.1", features = ["cookies"] }
winnow = { version = "0.5.26", features = ["simd"] }
